@@ -8,18 +8,12 @@ import tracker.*;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.HashMap;
 
 class InMemoryHistoryManagerTest {
     InMemoryHistoryManager historyManager = Managers.getDefaultHistory();
-    HashMap<Integer, Task> tasks = new HashMap<>();
-    HashMap<Integer, EpicTask> epicTasks = new HashMap<>();
-    HashMap<Integer, ArrayList<Subtask>> subTasks = new HashMap<>();
-    InMemoryTaskManager manager = new InMemoryTaskManager(tasks, epicTasks, subTasks);
-
 
     @Test
-    void historyShouldContainOnlyLastAddedTask() {
+    void addShouldContainOnlyLastAddedTaskInHistory() {
         String heading1 = "task1";
         String description1 = "task1 description";
         Task task1 = new Task(heading1, description1, 1, Duration.ofMinutes(30), LocalDateTime.now());
@@ -36,26 +30,38 @@ class InMemoryHistoryManagerTest {
         historyManager.add(task3);
 
         final ArrayList<Task> history = historyManager.getHistory();
-        assertNotNull(history, "История не пустая.");
-        assertEquals(3, history.size(), "История содержит три задачи.");
-        assertEquals(task3, history.get(2), "Последняя задача в истории");
-        assertEquals(task2, history.get(1), "Вторая задача в истории");
-        assertEquals(task1, history.get(0), "Первая задача в истории");
-
-        manager.removeTaskById(1);
-        assertEquals(3, history.size(), "История содержит информацию об удаленной задаче");
+        assertNotNull(history, "История не должна быть пустой.");
+        assertEquals(3, history.size(), "История должна содержать три задачи.");
+        assertEquals(task3, history.get(2), "Последняя задача в истории должна быть task3");
+        assertEquals(task2, history.get(1), "Вторая задача в истории должна быть task2");
+        assertEquals(task1, history.get(0), "Первая задача в истории должна быть task1");
     }
 
     @Test
-    public void testRemoveFromHistory() {
+    void removeShouldMaintainHistoryWithoutRemovedTask() {
+        historyManager.clear();
         Task task1 = new Task("Task 1", "Description", 1, Duration.ofMinutes(30), LocalDateTime.now());
         Task task2 = new Task("Task 2", "Description", 2, Duration.ofMinutes(45), LocalDateTime.now().plusDays(1));
+
         historyManager.add(task1);
         historyManager.add(task2);
 
         historyManager.remove(task1.getId());
 
-        assertEquals(1, historyManager.getHistory().size(), "История должна содержать одну задачу");
-        assertEquals(task2, historyManager.getHistory().get(0), "Осталась неверная задача в истории");
+        assertEquals(1, historyManager.getHistory().size(), "История должна содержать одну задачу после удаления.");
+        assertEquals(task2, historyManager.getHistory().getFirst(), "Осталась задача в истории.");
+    }
+
+
+    @Test
+    void removeShouldNotAffectHistory() {
+        Task task1 = new Task("Task 1", "Description", 1, Duration.ofMinutes(30), LocalDateTime.now());
+        historyManager.add(task1);
+
+
+        historyManager.remove(999);
+
+        assertEquals(1, historyManager.getHistory().size(), "История должна оставаться неизменной после попытки удалить несуществующую задачу.");
+        assertEquals(task1, historyManager.getHistory().get(0), "Задача в истории должна оставаться task1.");
     }
 }
